--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sharedb",
-  "version": "1.0.0-beta.13",
+  "name": "@evercoder/sharedb",
+  "version": "1.0.1",
   "description": "JSON OT database backend",
   "main": "lib/index.js",
   "dependencies": {
